--- a/notebooks/weaviate_tutorial.ipynb
+++ b/notebooks/weaviate_tutorial.ipynb
@@ -218,17 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "id": "4cc62dd2-b041-4071-b45a-95e7f44690ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "document_store = WeaviateDocumentStore()"
+    "document_store = WeaviateDocumentStore(recreate_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "id": "3fa29e29-05d9-4a4d-a406-f400b9c2c82d",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
       "            batching. See:\n",
       "            https://weaviate.io/developers/weaviate/current/restful-api-references/batch.html#example-request-1\n",
       "  warnings.warn(\n",
-      "13700it [00:48, 285.17it/s]                                                                                                      \n"
+      "13700it [00:40, 337.69it/s]                                                                                                      \n"
      ]
     }
    ],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "id": "c4a14c93-3ba9-44cb-9173-b0b972b0e87f",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "id": "f2d276d2-0ba0-4cb8-9897-47fdb6cef22c",
    "metadata": {},
    "outputs": [
@@ -361,22 +361,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(…)70bdf8fca0ca826b6b5d16ebc/.gitattributes: 100%|██████████████████████████████████████████████| 737/737 [00:00<00:00, 1.34MB/s]\n",
-      "(…)ca0ca826b6b5d16ebc/1_Pooling/config.json: 100%|███████████████████████████████████████████████| 190/190 [00:00<00:00, 219kB/s]\n",
-      "(…)abd4f70bdf8fca0ca826b6b5d16ebc/README.md: 100%|██████████████████████████████████████████| 8.65k/8.65k [00:00<00:00, 11.3MB/s]\n",
-      "(…)d4f70bdf8fca0ca826b6b5d16ebc/config.json: 100%|███████████████████████████████████████████████| 571/571 [00:00<00:00, 702kB/s]\n",
-      "(…)d16ebc/config_sentence_transformers.json: 100%|███████████████████████████████████████████████| 116/116 [00:00<00:00, 142kB/s]\n",
-      "(…)bdf8fca0ca826b6b5d16ebc/data_config.json: 100%|██████████████████████████████████████████| 25.5k/25.5k [00:00<00:00, 15.2MB/s]\n",
-      "pytorch_model.bin: 100%|██████████████████████████████████████████████████████████████████████| 438M/438M [00:36<00:00, 12.1MB/s]\n",
-      "(…)a826b6b5d16ebc/sentence_bert_config.json: 100%|████████████████████████████████████████████| 53.0/53.0 [00:00<00:00, 50.6kB/s]\n",
-      "(…)0ca826b6b5d16ebc/special_tokens_map.json: 100%|███████████████████████████████████████████████| 239/239 [00:00<00:00, 218kB/s]\n",
-      "(…)70bdf8fca0ca826b6b5d16ebc/tokenizer.json: 100%|████████████████████████████████████████████| 466k/466k [00:00<00:00, 1.86MB/s]\n",
-      "(…)ca0ca826b6b5d16ebc/tokenizer_config.json: 100%|███████████████████████████████████████████████| 363/363 [00:00<00:00, 346kB/s]\n",
-      "(…)0bdf8fca0ca826b6b5d16ebc/train_script.py: 100%|██████████████████████████████████████████| 13.9k/13.9k [00:00<00:00, 4.70MB/s]\n",
-      "(…)abd4f70bdf8fca0ca826b6b5d16ebc/vocab.txt: 100%|████████████████████████████████████████████| 232k/232k [00:00<00:00, 2.61MB/s]\n",
-      "(…)4f70bdf8fca0ca826b6b5d16ebc/modules.json: 100%|███████████████████████████████████████████████| 229/229 [00:00<00:00, 226kB/s]\n",
-      "/Users/patrickcallery/dev/question-answering/.venv/lib/python3.10/site-packages/torch/_utils.py:831: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
-      "  return self.fget.__get__(instance, owner)()\n",
       "You seem to be using sentence-transformers/multi-qa-mpnet-base-dot-v1 model with the cosine function instead of the recommended dot_product. This can be set when initializing the DocumentStore\n"
      ]
     }
@@ -390,6 +374,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "def13b01-4eef-484a-b5b5-42852f6385f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "WeaviateDocumentStoreError",
+     "evalue": "Query results contain errors: [{'locations': [{'column': 6, 'line': 1}], 'message': 'explorer: list class: search: invalid pagination params: query maximum results exceeded', 'path': ['Get', 'Document']}]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mWeaviateDocumentStoreError\u001b[0m                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[67], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdocument_store\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdate_embeddings\u001b[49m\u001b[43m(\u001b[49m\u001b[43mretriever\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/dev/question-answering/.venv/lib/python3.10/site-packages/haystack/document_stores/weaviate.py:1510\u001b[0m, in \u001b[0;36mWeaviateDocumentStore.update_embeddings\u001b[0;34m(self, retriever, index, filters, update_existing_embeddings, batch_size)\u001b[0m\n\u001b[1;32m   1507\u001b[0m \u001b[38;5;66;03m# We retrieve the JSON properties from the schema and convert them back to the Python dicts\u001b[39;00m\n\u001b[1;32m   1508\u001b[0m json_properties \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_json_properties(index\u001b[38;5;241m=\u001b[39mindex)\n\u001b[0;32m-> 1510\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m result_batch \u001b[38;5;129;01min\u001b[39;00m get_batches_from_generator(result, batch_size):\n\u001b[1;32m   1511\u001b[0m     document_batch \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m   1512\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_convert_weaviate_result_to_document(hit, return_embedding\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, json_properties\u001b[38;5;241m=\u001b[39mjson_properties)\n\u001b[1;32m   1513\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m hit \u001b[38;5;129;01min\u001b[39;00m result_batch\n\u001b[1;32m   1514\u001b[0m     ]\n\u001b[1;32m   1515\u001b[0m     embeddings \u001b[38;5;241m=\u001b[39m retriever\u001b[38;5;241m.\u001b[39membed_documents(document_batch)\n",
+      "File \u001b[0;32m~/dev/question-answering/.venv/lib/python3.10/site-packages/haystack/utils/batching.py:9\u001b[0m, in \u001b[0;36mget_batches_from_generator\u001b[0;34m(iterable, n)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124;03mBatch elements of an iterable into fixed-length chunks or blocks.\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m it \u001b[38;5;241m=\u001b[39m \u001b[38;5;28miter\u001b[39m(iterable)\n\u001b[0;32m----> 9\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mislice\u001b[49m\u001b[43m(\u001b[49m\u001b[43mit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m x:\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01myield\u001b[39;00m x\n",
+      "File \u001b[0;32m~/dev/question-answering/.venv/lib/python3.10/site-packages/haystack/document_stores/weaviate.py:900\u001b[0m, in \u001b[0;36mWeaviateDocumentStore._get_all_documents_in_index\u001b[0;34m(self, index, filters, batch_size, only_documents_without_embedding)\u001b[0m\n\u001b[1;32m    897\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m WeaviateDocumentStoreError(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWeaviate raised an exception: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    899\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124merrors\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m result:\n\u001b[0;32m--> 900\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m WeaviateDocumentStoreError(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQuery results contain errors: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresult[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124merrors\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    902\u001b[0m \u001b[38;5;66;03m# If `query.do` didn't raise and `result` doesn't contain errors,\u001b[39;00m\n\u001b[1;32m    903\u001b[0m \u001b[38;5;66;03m# we are good accessing data\u001b[39;00m\n\u001b[1;32m    904\u001b[0m docs \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGet\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mget(index)\n",
+      "\u001b[0;31mWeaviateDocumentStoreError\u001b[0m: Query results contain errors: [{'locations': [{'column': 6, 'line': 1}], 'message': 'explorer: list class: search: invalid pagination params: query maximum results exceeded', 'path': ['Get', 'Document']}]"
+     ]
+    }
+   ],
+   "source": [
+    "document_store.update_embeddings(retriever)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "eef98670-da59-48dc-8873-e744a1b100ec",
    "metadata": {},
@@ -399,24 +408,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "id": "1344ad82-3379-4f9a-b8d8-64d2245bbce5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "(…)yroberta-squad2/resolve/main/config.json: 100%|███████████████████████████████████████████████| 835/835 [00:00<00:00, 204kB/s]\n",
-      "model.safetensors: 100%|██████████████████████████████████████████████████████████████████████| 326M/326M [00:18<00:00, 18.0MB/s]\n",
-      "(…)quad2/resolve/main/tokenizer_config.json: 100%|██████████████████████████████████████████████| 383/383 [00:00<00:00, 1.94MB/s]\n",
-      "(…)nyroberta-squad2/resolve/main/vocab.json: 100%|████████████████████████████████████████████| 798k/798k [00:00<00:00, 3.27MB/s]\n",
-      "(…)nyroberta-squad2/resolve/main/merges.txt: 100%|████████████████████████████████████████████| 456k/456k [00:00<00:00, 1.85MB/s]\n",
-      "(…)berta-squad2/resolve/main/tokenizer.json: 100%|██████████████████████████████████████████| 1.36M/1.36M [00:00<00:00, 3.27MB/s]\n",
-      "(…)ad2/resolve/main/special_tokens_map.json: 100%|███████████████████████████████████████████████| 239/239 [00:00<00:00, 240kB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creating a Reader component as defined above\n",
     "READER_MODEL = \"deepset/tinyroberta-squad2\"\n",
@@ -495,9 +490,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e53adcca-0143-4796-b1ce-b64528121bf1",
+   "metadata": {},
+   "source": [
+    "### Trying Out Different Similarity Metric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "97265374-3ae1-4136-bc66-047441348c3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SIMILARITY_METRIC = \"dot_product\"\n",
+    "document_store_dot_product = WeaviateDocumentStore(similarity=SIMILARITY_METRIC, recreate_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "b5f8196f-ee72-4538-b62a-9cccd988daa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You seem to be using sentence-transformers/multi-qa-mpnet-base-dot-v1 model with the dot function instead of the recommended dot_product. This can be set when initializing the DocumentStore\n"
+     ]
+    }
+   ],
+   "source": [
+    "retriever = EmbeddingRetriever(\n",
+    "    document_store=document_store_dot_product, \n",
+    "    model_format=MODEL_FORMAT,\n",
+    "    embedding_model=EMBEDDING_MODEL\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "b114a3c9-7bd8-4da3-867c-960963c89640",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "document_store_dot_product.update_embeddings(retriever)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "ad17f376-10f8-4cab-804a-f0694e22ecbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question_answering_pipeline = ExtractiveQAPipeline(reader=reader, retriever=retriever)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "18023de6-1618-493c-b78b-165fd5b2b6f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "QUESTION = \"How many points is catching the Golden Snitch worth?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "75dbb1ea-252f-4c95-8ea0-79ba08e4c692",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Batches: 100%|█████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  5.26it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction = question_answering_pipeline.run(query=QUESTION, params={\"Retriever\": {\"top_k\": 10}, \"Reader\": {\"top_k\": 5}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "e7b0c1d3-20b8-4a9a-97ef-9c12a66a8559",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Query: How many points is catching the Golden Snitch worth?'\n",
+      "'Answers:'\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_answers(prediction)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "756c99c8-8f32-4a62-959e-e9669c042c4c",
+   "id": "a122d81e-6d8d-4377-ac1c-daee2971b568",
    "metadata": {},
    "outputs": [],
    "source": []
