Add missing load_dotenv

--- a/notebooks/weaviate_schema_tutorial.ipynb
+++ b/notebooks/weaviate_schema_tutorial.ipynb
@@ -32,6 +32,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7a750816",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "e38bf6c1-f04d-40a7-ba55-090ed8bf6914",
    "metadata": {},
